[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stage_controller"
version = "0.1.0"
description = "A GUI for controlling the Net Controls stage"
authors = [{ name = "Joshua Erbe", email = "j.erbe@oregon-physics.com" }]
dependencies = ["pyside6", "qt-material", "pyserial"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
run-app = "src.main:run_app"
